Set up home section, and update the color palette.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid justify-content-start">
 
-        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar-nav-wrap" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar-nav-wrap"
+                aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="fa fa-bars"></span>
         </button>
 
         <a class="navbar-brand pl-lg-0 pl-2" href="#">
-          <img src="images/next_grey.png">
+          <img src="images/next_color-dark.png">
         </a>
 
         <div class="collapse navbar-collapse justify-content-end" id="navbar-nav-wrap">
@@ -43,27 +44,62 @@
     </nav>
 
     <!-- Home -->
-    <section class="home section bg-primary no-pt no-pb">
-      <div class="container">
+    <section class="home section d-flex align-items-stretch pt-0 pb-0">
+      <div class="container d-flex align-items-stretch">
         <div class="row justify-content-center mb-5">
-          <div class="col-md-12 text-center heading-section animate">
-            <h2 class="mb-4">Be an Innovator</h2>
+          <!-- Row 1 -->
+          <div class="col-1 d-none d-xxl-flex"></div>
+          <div class="col-7 col-md-6 col-xxl-5 home-text-wrap animate">
+            <div class="row home-text">
+              <div class="col-lg pr-0">Be an</div>
+              <div class="col-lg keyword">Innovator</div>
+            </div>
           </div>
-          <div class="col-md-12 text-center heading-section animate">
-            <h2 class="mb-4">Be a Creator</h2>
+          <div class="col-5 col-md-3 col-xxl-2 icon d-flex align-items-center ">
+            <img src="images/innovate.jpg">
           </div>
-          <div class="col-md-12 text-center heading-section animate">
-            <h2 class="mb-4">Be a Competitor</h2>
+          <div class="col-3 col-xxl-4 d-none d-md-flex"></div>
+          <!-- Row 2 -->
+          <div class="col-1 col-xxl-2 d-none d-md-flex"></div>
+          <div class="col-7 col-md-6 col-xxl-5 home-text-wrap animate">
+            <div class="row home-text">
+              <div class="col-lg pr-0">Be a</div>
+              <div class="col-lg keyword">Creator</div>
+            </div>
           </div>
-          <div class="col-md-12 text-center heading-section animate">
-            <h2 class="mb-4">Be NEXT</h2>
+          <div class="col-5 col-md-3 col-xxl-2 icon d-flex align-items-center ">
+            <img src="images/create.jpg">
           </div>
+          <div class="col-2 col-xxl-3 d-none d-md-flex"></div>
+          <!-- Row 3 -->
+          <div class="col-2 col-xxl-3 d-none d-md-flex"></div>
+          <div class="col-7 col-md-6 col-xxl-5 home-text-wrap animate">
+            <div class="row home-text">
+              <div class="col-lg pr-0">Be a</div>
+              <div class="col-lg keyword">Competitor</div>
+            </div>
+          </div>
+          <div class="col-5 col-md-3 col-xxl-2 icon d-flex align-items-center ">
+            <img src="images/compete.jpg">
+          </div>
+          <div class="col-1 col-xxl-2 d-none d-md-flex"></div>
+          <!-- Row 4 -->
+          <div class="col-3 col-xxl-4 d-none d-md-flex"></div>
+          <div class="col-7 col-md-6 col-xxl-5 home-text-wrap animate">
+            <div class="be-next">
+              Be <span class="keyword">NEXT</span>
+            </div>
+          </div>
+          <div class="col-5 col-md-3 col-xxl-2 icon d-flex align-items-center ">
+            <img src="images/crest_color-light.png">
+          </div>
+          <div class="col-1 d-none d-xxl-flex"></div>
         </div>
       </div>
     </section>
 
     <!-- Title -->
-    <section class="section no-pt">
+    <section class="section pt-0">
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-10 text-center heading-section">
@@ -87,14 +123,14 @@
       </div>
 
       <!-- Overview -->
-      <section class="section no-pt">
+      <section class="section pt-0">
         <div class="container">
           Stuff
         </div>
       </section>
 
       <!-- Highlights -->
-      <section class="section bg-light no-pt no-pb">
+      <section class="section bg-light pt-0 pb-0">
         <div class="container">
           <div class="row justify-content-center mb-5">
             <div class="col-md-10 text-center heading-section animate">
@@ -167,7 +203,7 @@
       </div>
 
       <!-- Mission -->
-      <section class="section no-pt no-pb">
+      <section class="section pt-0 pb-0">
         <div class="container">
           <div class="row justify-content-center mb-5">
             <div class="col-md-10 text-center heading-section animate">
@@ -178,7 +214,7 @@
       </section>
 
       <!-- Vision -->
-      <section class="section bg-light no-pt no-pb">
+      <section class="section bg-light pt-0 pb-0">
         <div class="container">
           <div class="row justify-content-center mb-5">
             <div class="col-md-10 text-center heading-section animate">
@@ -191,7 +227,7 @@
     </section>
 
     <!-- Subscribe -->
-    <section id="subscribe" class="section bg-primary no-pt no-pb">
+    <section id="subscribe" class="section bg-primary pt-0 pb-0">
       <div class="container">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-8 py-4">
