--- a/index.html
+++ b/index.html
@@ -49,48 +49,48 @@
         <div class="row justify-content-center mb-5">
           <!-- Row 1 -->
           <div class="col-1 d-none d-xxl-flex"></div>
-          <div class="col-7 col-md-6 col-xxl-5 home-text-wrap animate">
+          <div class="col-7 col-md-6 col-xxl-5 home-text-wrap home-animate" data-animate-delay=500>
             <div class="row home-text">
               <div class="col-lg pr-0">Be an</div>
               <div class="col-lg keyword">Innovator</div>
             </div>
           </div>
-          <div class="col-5 col-md-3 col-xxl-2 icon d-flex align-items-center ">
+          <div class="col-5 col-md-3 col-xxl-2 icon d-flex align-items-center home-animate" data-animate-delay=500>
             <img src="images/innovate.jpg">
           </div>
           <div class="col-3 col-xxl-4 d-none d-md-flex"></div>
           <!-- Row 2 -->
           <div class="col-1 col-xxl-2 d-none d-md-flex"></div>
-          <div class="col-7 col-md-6 col-xxl-5 home-text-wrap animate">
+          <div class="col-7 col-md-6 col-xxl-5 home-text-wrap home-animate" data-animate-delay=1250>
             <div class="row home-text">
               <div class="col-lg pr-0">Be a</div>
               <div class="col-lg keyword">Creator</div>
             </div>
           </div>
-          <div class="col-5 col-md-3 col-xxl-2 icon d-flex align-items-center ">
+          <div class="col-5 col-md-3 col-xxl-2 icon d-flex align-items-center home-animate" data-animate-delay=1250>
             <img src="images/create.jpg">
           </div>
           <div class="col-2 col-xxl-3 d-none d-md-flex"></div>
           <!-- Row 3 -->
           <div class="col-2 col-xxl-3 d-none d-md-flex"></div>
-          <div class="col-7 col-md-6 col-xxl-5 home-text-wrap animate">
+          <div class="col-7 col-md-6 col-xxl-5 home-text-wrap home-animate" data-animate-delay=2000>
             <div class="row home-text">
               <div class="col-lg pr-0">Be a</div>
               <div class="col-lg keyword">Competitor</div>
             </div>
           </div>
-          <div class="col-5 col-md-3 col-xxl-2 icon d-flex align-items-center ">
+          <div class="col-5 col-md-3 col-xxl-2 icon d-flex align-items-center home-animate" data-animate-delay=2000>
             <img src="images/compete.jpg">
           </div>
           <div class="col-1 col-xxl-2 d-none d-md-flex"></div>
           <!-- Row 4 -->
           <div class="col-3 col-xxl-4 d-none d-md-flex"></div>
-          <div class="col-7 col-md-6 col-xxl-5 home-text-wrap animate">
+          <div class="col-7 col-md-6 col-xxl-5 home-text-wrap home-animate" data-animate-delay=3500>
             <div class="be-next">
               Be <span class="keyword">NEXT</span>
             </div>
           </div>
-          <div class="col-5 col-md-3 col-xxl-2 icon d-flex align-items-center ">
+          <div class="col-5 col-md-3 col-xxl-2 icon d-flex align-items-center home-animate" data-animate-delay=3500>
             <img src="images/crest_color-light.png">
           </div>
           <div class="col-1 d-none d-xxl-flex"></div>
